force-app/main/default/objects/Case/fields/Address_for_Address_Correction__c.field-meta.xml
<CustomField>
    <fullName>Address_for_Address_Correction__c</fullName>
    <label>Address for Address Correction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>