force-app/main/default/objects/Case/fields/Assignment_Timestamp_Monitor_Queue__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Timestamp_Monitor_Queue__c</fullName>
    <label>Assignment Timestamp (Monitor Queue)</label>
    <type>DateTime</type>
</CustomField>