force-app/main/default/objects/Case/fields/Baby_Registry__c.field-meta.xml
<CustomField>
    <fullName>Baby_Registry__c</fullName>
    <label>Baby Registry</label>
    <length>8</length>
    <type>Text</type>
</CustomField>