force-app/main/default/objects/Case/fields/Call_Back_Expected__c.field-meta.xml
<CustomField>
    <fullName>Call_Back_Expected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call Back Expected</label>
    <type>Checkbox</type>
</CustomField>