force-app/main/default/objects/Case/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <formula>RIGHT(TEXT(YEAR(DATEVALUE(CreatedDate))),2) +   
LPAD(TEXT(MONTH(DATEVALUE(CreatedDate))),2,&quot;0&quot;) +   
LPAD(TEXT(DAY(DATEVALUE(CreatedDate))),2,&quot;0&quot;) + &apos; - &apos; + CaseNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Number</label>
    <type>Text</type>
</CustomField>