force-app/main/default/objects/Case/fields/Case_SCC_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Case_SCC_Sync_Status__c</fullName>
    <description>This is a connector field used to store case sync status</description>
    <label>Case SCC Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Updated</fullName>
            </value>
            <value>
                <fullName>Synchronised</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>