force-app/main/default/objects/Case/fields/Case_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Sub_Type__c</fullName>
    <description>This field holds case sub type value coming from Salesforce Commerce Cloud.</description>
    <inlineHelpText>This field holds case sub type value coming from Salesforce Commerce Cloud.</inlineHelpText>
    <label>Case Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Where is my order</fullName>
            </value>
            <value>
                <fullName>What is my order status</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>In Store</fullName>
            </value>
            <value>
                <fullName>Price Match</fullName>
            </value>
            <value>
                <fullName>Order General</fullName>
            </value>
            <value>
                <fullName>Order Cancel</fullName>
            </value>
            <value>
                <fullName>Item General</fullName>
            </value>
            <value>
                <fullName>Return</fullName>
            </value>
            <value>
                <fullName>Promotion General</fullName>
            </value>
            <value>
                <fullName>Baby Registry General</fullName>
            </value>
            <value>
                <fullName>Website General</fullName>
            </value>
            <value>
                <fullName>RClub General</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>