force-app/main/default/objects/Case/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <formula>If(OR(ISPICKVAL(Origin, &quot;Email&quot;), ISPICKVAL(Origin, &quot;Web&quot;), ISPICKVAL(Origin, &quot;Chat offline form&quot;)), &quot;Email&quot;,
IF(ISPICKVAL(Origin, &quot;Phone&quot;), &quot;Phone&quot;,
If(ISPICKVAL(Origin, &quot;Chat&quot;), &quot;Chat&quot;,
If(Or(ISPICKVAL(Origin, &quot;Facebook&quot;),ISPICKVAL(Origin, &quot;Twitter&quot;), ISPICKVAL(Origin, &quot;Instagram&quot;), ISPICKVAL(Origin, &quot;Social&quot;)), &quot;Social&quot;, &quot;Email&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel</label>
    <type>Text</type>
</CustomField>