force-app/main/default/objects/Case/fields/Chat_Language__c.field-meta.xml
<CustomField>
    <fullName>Chat_Language__c</fullName>
    <label>Chat Language</label>
    <length>20</length>
    <type>Text</type>
</CustomField>