force-app/main/default/objects/Case/fields/Comment_to_be_sent_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Comment_to_be_sent_to_Customer__c</fullName>
    <description>Hidden field to save &apos;Resolved&apos; or &apos;Waiting on Customer&apos; comment and then sent it via email to customer</description>
    <label>Comment to be sent to Customer</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>