force-app/main/default/objects/Case/fields/Customer_Alerting_Media__c.field-meta.xml
<CustomField>
    <fullName>Customer_Alerting_Media__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Alerting Media?</label>
    <type>Checkbox</type>
</CustomField>