force-app/main/default/objects/Case/fields/Customer_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Order_Number__c</fullName>
    <formula>Order__r.SFCC_Order_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OMS Order Number</label>
    <type>Text</type>
</CustomField>