force-app/main/default/objects/Case/fields/Did_Injury_Occur__c.field-meta.xml
<CustomField>
    <fullName>Did_Injury_Occur__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Did Injury Occur?</label>
    <type>Checkbox</type>
</CustomField>