force-app/main/default/objects/Case/fields/Director_of_Field_Operations__c.field-meta.xml
<CustomField>
    <fullName>Director_of_Field_Operations__c</fullName>
    <label>Director of Field Operations</label>
    <type>Email</type>
</CustomField>