force-app/main/default/objects/Case/fields/Disposition_1__c.field-meta.xml
<CustomField>
    <fullName>Disposition_1__c</fullName>
    <label>Level 1</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>243/391 Both Warehouses Cancel Request *</fullName>
                <isActive>false</isActive>
                <label>243/391 Both Warehouses Cancel Request</label>
            </value>
            <value>
                <fullName>243 Assured</fullName>
                <isActive>false</isActive>
                <label>243 Assured</label>
            </value>
            <value>
                <fullName>243 Assured Cancel  *</fullName>
                <isActive>false</isActive>
                <label>243 Assured Cancel  *</label>
            </value>
            <value>
                <fullName>327 Drop Ship</fullName>
                <isActive>false</isActive>
                <label>327 Drop Ship</label>
            </value>
            <value>
                <fullName>327 DS Cancel Request</fullName>
                <isActive>false</isActive>
                <label>327 DS Cancel Request</label>
            </value>
            <value>
                <fullName>391 SFS Cancelled in StoreNet</fullName>
                <isActive>false</isActive>
                <label>391 SFS Cancelled in StoreNet</label>
            </value>
            <value>
                <fullName>391 SFS - Cancelled in StoreNet</fullName>
                <isActive>false</isActive>
                <label>391 SFS - Cancelled in StoreNet</label>
            </value>
            <value>
                <fullName>391 SFS Cancel Request *</fullName>
                <isActive>false</isActive>
                <label>391 SFS Cancel Request *</label>
            </value>
            <value>
                <fullName>391 SFS - Changed in StoreNet</fullName>
                <isActive>false</isActive>
                <label>391 SFS - Changed in StoreNet</label>
            </value>
            <value>
                <fullName>391 SFS - Unable to update StoreNet</fullName>
                <isActive>false</isActive>
                <label>391 SFS - Unable to update StoreNet</label>
            </value>
            <value>
                <fullName>396 ISPU Cancel request</fullName>
                <isActive>false</isActive>
                <label>396 ISPU Cancel request</label>
            </value>
            <value>
                <fullName>Accepted in error</fullName>
            </value>
            <value>
                <fullName>Accepted in error - SFS</fullName>
                <isActive>false</isActive>
                <label>Accepted in error - SFS</label>
            </value>
            <value>
                <fullName>Activation</fullName>
                <isActive>false</isActive>
                <label>Activation</label>
            </value>
            <value>
                <fullName>Add/Update/Remove from Email List</fullName>
            </value>
            <value>
                <fullName>Add/Update to Email Mailing List</fullName>
                <isActive>false</isActive>
                <label>Add/Update to Email Mailing List</label>
            </value>
            <value>
                <fullName>Address Correction</fullName>
            </value>
            <value>
                <fullName>Ad Misprint</fullName>
                <isActive>false</isActive>
                <label>Ad Misprint</label>
            </value>
            <value>
                <fullName>AL1</fullName>
                <isActive>false</isActive>
                <label>AL1</label>
            </value>
            <value>
                <fullName>AL1/SFS Both Warehouses Cancel Request *</fullName>
                <isActive>false</isActive>
                <label>AL1/SFS Both Warehouses Cancel Request *</label>
            </value>
            <value>
                <fullName>AL1 Cancel *</fullName>
                <isActive>false</isActive>
                <label>AL1 Cancel *</label>
            </value>
            <value>
                <fullName>Alleged Safety Concerns (no injury)</fullName>
                <isActive>false</isActive>
                <label>Alleged Safety Concerns (no injury)</label>
            </value>
            <value>
                <fullName>Allergic Reaction</fullName>
                <isActive>false</isActive>
                <label>Allergic Reaction</label>
            </value>
            <value>
                <fullName>Already Shipped</fullName>
                <isActive>false</isActive>
                <label>Already Shipped</label>
            </value>
            <value>
                <fullName>Anti Spam Law</fullName>
                <isActive>false</isActive>
                <label>Anti Spam Law</label>
            </value>
            <value>
                <fullName>Appeasement</fullName>
                <isActive>false</isActive>
                <label>Appeasement</label>
            </value>
            <value>
                <fullName>Authorization</fullName>
                <isActive>false</isActive>
                <label>Authorization</label>
            </value>
            <value>
                <fullName>Availability Inquiry Advertised Item</fullName>
                <color>#FF9966</color>
                <label>Availability Inquiry Advertised Item</label>
            </value>
            <value>
                <fullName>Availability Inquiry Non-Advertised</fullName>
            </value>
            <value>
                <fullName>Availability Inquiry Non-Advertised Item</fullName>
                <isActive>false</isActive>
                <label>Availability Inquiry Non-Advertised Item</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>