force-app/main/default/objects/Case/fields/Disposition_2__c.field-meta.xml
<CustomField>
    <fullName>Disposition_2__c</fullName>
    <label>Level 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Disposition_1__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>Activation</fullName>
            </value>
            <value>
                <fullName>AL1</fullName>
                <isActive>false</isActive>
                <label>AL1</label>
            </value>
            <value>
                <fullName>AL1/SFS Both Warehouses Cancel Request</fullName>
                <isActive>false</isActive>
                <label>AL1/SFS Both Warehouses Cancel Request *C</label>
            </value>
            <value>
                <fullName>AL1 &amp; SFS</fullName>
                <isActive>false</isActive>
                <label>AL1 &amp; SFS</label>
            </value>
            <value>
                <fullName>AL1 &amp; SFS - 2 days or less</fullName>
                <isActive>false</isActive>
                <label>AL1 &amp; SFS - 2 days or less</label>
            </value>
            <value>
                <fullName>AL1 &amp; SFS - over 2 days</fullName>
                <isActive>false</isActive>
                <label>AL1 &amp; SFS - over 2 days *C</label>
            </value>
            <value>
                <fullName>AL1 - 2 days or less</fullName>
                <isActive>false</isActive>
                <label>AL1 - 2 days or less</label>
            </value>
            <value>
                <fullName>AL1 Cancel  Request</fullName>
                <isActive>false</isActive>
                <label>AL1 Cancel  Request *C</label>
            </value>
            <value>
                <fullName>AL1 - over 2 days</fullName>
                <isActive>false</isActive>
                <label>AL1 - over 2 days *C</label>
            </value>
            <value>
                <fullName>AL1 - Wrong order</fullName>
                <isActive>false</isActive>
                <label>AL1 - Wrong order</label>
            </value>
            <value>
                <fullName>AL1 - Wrong product</fullName>
                <isActive>false</isActive>
                <label>AL1 - Wrong product</label>
            </value>
            <value>
                <fullName>Alleged Safety Concerns (no injury)</fullName>
                <label>Alleged Safety Concerns (no injury) *P</label>
            </value>
            <value>
                <fullName>Allergic Reaction</fullName>
                <label>Allergic Reaction *P</label>
            </value>
            <value>
                <fullName>Already Shipped</fullName>
            </value>
            <value>
                <fullName>Appearance/Condition*</fullName>
                <isActive>false</isActive>
                <label>Appearance/Condition*</label>
            </value>
            <value>
                <fullName>Authorization Explanation of hold/process</fullName>
            </value>
            <value>
                <fullName>Authorization Void request</fullName>
            </value>
            <value>
                <fullName>Availability Inquiry</fullName>
                <isActive>false</isActive>
                <label>Availability Inquiry</label>
            </value>
            <value>
                <fullName>Back Order BO</fullName>
                <isActive>false</isActive>
                <label>Back Order BO</label>
            </value>
            <value>
                <fullName>Balance Inquiry</fullName>
            </value>
            <value>
                <fullName>Broken/Damaged</fullName>
                <label>Broken/Damaged *C</label>
            </value>
            <value>
                <fullName>Canada Post</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
            <value>
                <fullName>Cancel -  OMS / No warehouse</fullName>
                <label>Cancel -  in OMS / No warehouse / By agent</label>
            </value>
            <value>
                <fullName>Cancellation not Credited</fullName>
            </value>
            <value>
                <fullName>CanPar and other</fullName>
            </value>
            <value>
                <fullName>Clarification of Return Policy</fullName>
            </value>
            <value>
                <fullName>Combine GC</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>