force-app/main/default/objects/Case/fields/District_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>District_Manager_Email__c</fullName>
    <label>Regional VP Email</label>
    <type>Email</type>
</CustomField>