force-app/main/default/objects/Case/fields/Do_Not_Trigger_Internal_Email__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Trigger_Internal_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Trigger Internal Email</label>
    <type>Checkbox</type>
</CustomField>