force-app/main/default/objects/Case/fields/ECR_Email__c.field-meta.xml
<CustomField>
    <fullName>ECR_Email__c</fullName>
    <label>ECR Email</label>
    <type>Email</type>
</CustomField>