force-app/main/default/objects/Case/fields/Entry_Site__c.field-meta.xml
<CustomField>
    <fullName>Entry_Site__c</fullName>
    <label>Entry Site</label>
    <length>100</length>
    <type>Text</type>
</CustomField>