force-app/main/default/objects/Case/fields/Finance_Email__c.field-meta.xml
<CustomField>
    <fullName>Finance_Email__c</fullName>
    <label>Finance Email</label>
    <type>Email</type>
</CustomField>