force-app/main/default/objects/Case/fields/Forwarded_to_OnContact__c.field-meta.xml
<CustomField>
    <fullName>Forwarded_to_OnContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Forwarded to OnContact</label>
    <type>Checkbox</type>
</CustomField>