force-app/main/default/objects/Case/fields/Fulfillment_Team_Email__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Team_Email__c</fullName>
    <label>Fulfillment Team Email</label>
    <type>Email</type>
</CustomField>