force-app/main/default/objects/Case/fields/GC_frozen__c.field-meta.xml
<CustomField>
    <fullName>GC_frozen__c</fullName>
    <label>GC frozen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>