force-app/main/default/objects/Case/fields/Gift_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Gift_Card_Number__c</fullName>
    <label>Gift Card Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>