force-app/main/default/objects/Case/fields/Hidden_Case_Comment__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Case_Comment__c</fullName>
    <label>Hidden Case Comment</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>