force-app/main/default/objects/Case/fields/Hour_of_Day_Opened__c.field-meta.xml
<CustomField>
    <fullName>Hour_of_Day_Opened__c</fullName>
    <description>This is the Hour (1-12, starting at midnight) that the case was opened. Salesforce stores created date standard field information in GMT. The formula is required to adjust the dates for EST.</description>
    <formula>Hour(TIMEVALUE( CreatedDate - ( 5 / 24 ) )) +1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hour of Day Opened</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>