force-app/main/default/objects/Case/fields/Is_Comment_Sended__c.field-meta.xml
<CustomField>
    <fullName>Is_Comment_Sended__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hidden field for determine if comment was sent via email</description>
    <label>Is Comment Sended</label>
    <type>Checkbox</type>
</CustomField>