force-app/main/default/objects/Case/fields/Is_Created_From_Offline_Form__c.field-meta.xml
<CustomField>
    <fullName>Is_Created_From_Offline_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Created From Offline Form?</label>
    <type>Checkbox</type>
</CustomField>