force-app/main/default/objects/Case/fields/KIT_Status__c.field-meta.xml
<CustomField>
    <fullName>KIT_Status__c</fullName>
    <label>KIT Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waiting on Store</fullName>
            </value>
            <value>
                <fullName>Waiting on Support</fullName>
            </value>
            <value>
                <fullName>Waiting on Customer</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>