force-app/main/default/objects/Case/fields/Legal_Threat__c.field-meta.xml
<CustomField>
    <fullName>Legal_Threat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legal Threat?</label>
    <type>Checkbox</type>
</CustomField>