force-app/main/default/objects/Case/fields/Main_Online_Warehouse_Email__c.field-meta.xml
<CustomField>
    <fullName>Main_Online_Warehouse_Email__c</fullName>
    <label>Main Online Warehouse Email</label>
    <type>Email</type>
</CustomField>