force-app/main/default/objects/Case/fields/Monitor_Queue__c.field-meta.xml
<CustomField>
    <fullName>Monitor_Queue__c</fullName>
    <label>Monitor Queue</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All Levels - Monitor Queue</fullName>
            </value>
            <value>
                <fullName>Tier 2 - Monitor Queue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>