force-app/main/default/objects/Case/fields/Not_Manual__c.field-meta.xml
<CustomField>
    <fullName>Not_Manual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Manual?</label>
    <type>Checkbox</type>
</CustomField>