force-app/main/default/objects/Case/fields/OMS_PM_Email__c.field-meta.xml
<CustomField>
    <fullName>OMS_PM_Email__c</fullName>
    <label>OMS PM Email</label>
    <type>Email</type>
</CustomField>