force-app/main/default/objects/Case/fields/OnContact_External_ID__c.field-meta.xml
<CustomField>
    <fullName>OnContact_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>OnContact External ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>