force-app/main/default/objects/Case/fields/Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_Item__c</fullName>
    <label>Order Line Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>