force-app/main/default/objects/Case/fields/Order_Number_DEPR__c.field-meta.xml
<CustomField>
    <fullName>Order_Number_DEPR__c</fullName>
    <label>Order Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>