force-app/main/default/objects/Case/fields/Price_Match_Value__c.field-meta.xml
<CustomField>
    <fullName>Price_Match_Value__c</fullName>
    <label>Price to adjust to</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>