force-app/main/default/objects/Case/fields/Price_Match_With_ToysRUs__c.field-meta.xml
<CustomField>
    <fullName>Price_Match_With_ToysRUs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Price Adjustment with ToysRUs</label>
    <type>Checkbox</type>
</CustomField>