force-app/main/default/objects/Case/fields/Product_Safety_Email__c.field-meta.xml
<CustomField>
    <fullName>Product_Safety_Email__c</fullName>
    <label>Product Safety Email</label>
    <type>Email</type>
</CustomField>