force-app/main/default/objects/Case/fields/Queue_Sub_type__c.field-meta.xml
<CustomField>
    <fullName>Queue_Sub_type__c</fullName>
    <label>Queue Sub type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account</fullName>
                <isActive>false</isActive>
                <label>Account</label>
            </value>
            <value>
                <fullName>Address Correction</fullName>
            </value>
            <value>
                <fullName>Authorization</fullName>
                <isActive>false</isActive>
                <label>Authorization</label>
            </value>
            <value>
                <fullName>Baby Registry</fullName>
                <isActive>false</isActive>
                <label>Baby Registry</label>
            </value>
            <value>
                <fullName>Bin Check</fullName>
            </value>
            <value>
                <fullName>Bulk Order</fullName>
                <isActive>false</isActive>
                <label>Bulk Order</label>
            </value>
            <value>
                <fullName>Buyer Protection Plan</fullName>
                <isActive>false</isActive>
                <label>Buyer Protection Plan</label>
            </value>
            <value>
                <fullName>Cancel</fullName>
                <isActive>false</isActive>
                <label>Cancel</label>
            </value>
            <value>
                <fullName>Carrier claim (Canada Post)</fullName>
            </value>
            <value>
                <fullName>Carrier claim (not Canada Post)</fullName>
            </value>
            <value>
                <fullName>Charity Programs</fullName>
                <isActive>false</isActive>
                <label>Charity Programs</label>
            </value>
            <value>
                <fullName>Credit/Debit Card Issue</fullName>
                <isActive>false</isActive>
                <label>Credit/Debit Card Issue</label>
            </value>
            <value>
                <fullName>Credit Inquiry</fullName>
                <isActive>false</isActive>
                <label>Credit Inquiry</label>
            </value>
            <value>
                <fullName>Donations</fullName>
                <isActive>false</isActive>
                <label>Donations</label>
            </value>
            <value>
                <fullName>Drop Ship</fullName>
            </value>
            <value>
                <fullName>eBay</fullName>
                <isActive>false</isActive>
                <label>eBay</label>
            </value>
            <value>
                <fullName>ECR</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
                <isActive>false</isActive>
                <label>Email</label>
            </value>
            <value>
                <fullName>Email List Only</fullName>
                <isActive>false</isActive>
                <label>Email List Only</label>
            </value>
            <value>
                <fullName>Employee Issues</fullName>
                <isActive>false</isActive>
                <label>Employee Issues</label>
            </value>
            <value>
                <fullName>Escalation and Ecom</fullName>
            </value>
            <value>
                <fullName>Gift Card</fullName>
            </value>
            <value>
                <fullName>International Other</fullName>
                <isActive>false</isActive>
                <label>International Other</label>
            </value>
            <value>
                <fullName>ISPU</fullName>
            </value>
            <value>
                <fullName>Manufacturer Inquiry</fullName>
                <isActive>false</isActive>
                <label>Manufacturer Inquiry</label>
            </value>
            <value>
                <fullName>Marketing</fullName>
                <isActive>false</isActive>
                <label>Marketing</label>
            </value>
            <value>
                <fullName>Order</fullName>
                <isActive>false</isActive>
                <label>Order</label>
            </value>
            <value>
                <fullName>Payment Inquiries</fullName>
            </value>
            <value>
                <fullName>Presell</fullName>
                <isActive>false</isActive>
                <label>Presell</label>
            </value>
            <value>
                <fullName>Price Match</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>