force-app/main/default/objects/Case/fields/Receipt_requested__c.field-meta.xml
<CustomField>
    <fullName>Receipt_requested__c</fullName>
    <label>Receipt requested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>