force-app/main/default/objects/Case/fields/SFCC_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>SFCC_Customer_Id__c</fullName>
    <description>This field holds salesforce commerce cloud customer id. Usually case will be connected to contact but this field is to cover edge cases.</description>
    <inlineHelpText>This field holds salesforce commerce cloud customer id. Usually case will be connected to contact but this field is to cover edge cases.</inlineHelpText>
    <label>SFCC Customer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>