force-app/main/default/objects/Case/fields/SFCC_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>SFCC_Customer_Number__c</fullName>
    <description>This field holds commerce cloud customer number</description>
    <inlineHelpText>This field holds commerce cloud customer number</inlineHelpText>
    <label>SFCC Customer Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>